<resources>
    <string name="app_name">Drift</string>
    <string name="no_conversations_found">No conversations found!</string>
    <string name="failed_to_load_conversations">Failed to load conversations</string>
    <string name="error_title">Error</string>
    <string name="retry">Retry</string>
    <string name="drift_sdk_create">Create</string>
    <string name="drift_sdk_download">Download</string>
    <string name="drift_sdk_no_network_connection">No network connection</string>
    <string name="drift_sdk_were_powered_by_drift">We\'re ⚡️ by Drift</string>
    <string name="drift_sdk_reply">Reply</string>
    <string name="drift_sdk_schedule">Schedule</string>
    <string name="drift_sdk_meeting_powered_by_drift">Meeting ⚡️ by Drift</string>
    <string name="drift_sdk_connection_error">Connection Error</string>
    <string name="drift_sdk_you_have_no_conversations_lets_talk">You have no conversations\n\nLets talk!</string>
    <string name="drift_sdk_new_conversation">New Conversation</string>
    <string name="drift_sdk_dismiss">Dismiss</string>
    <string name="drift_sdk_open">Open</string>
    <string name="drift_sdk_schedule_a_meeting">Schedule a meeting</string>
    <string name="drift_sdk_select_a_day">Select a Day</string>
    <string name="drift_sdk_select_a_time">Select a Time</string>
    <string name="drift_sdk_unknown_user">Unknown User</string>
    <string name="drift_sdk_you">You</string>
    <string name="drift_sdk_99_plus">99+</string>
    <string name="drift_sdk_today">Today</string>
    <string name="drift_sdk_scheduling_meeting">Scheduling Meeting</string>
    <string name="drift_sdk_scheduled_meeting">Scheduled Meeting</string>

    <string name="drift_sdk_schedule_meeting_minutes">%d Mins</string>
    <string name="drift_sdk_dash_divided_strings">%s - %s</string>
    <string name="drift_sdk_attachment_text">📎 [Attachment]</string>
    <string name="drift_sdk_scheduling_meeting_with">Scheduling a Meeting with %s</string>
    <string name="drift_sdk_scheduled_meeting_with">Scheduled a Meeting with %s</string>

</resources>
