<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="drift.com.drift.activities.ConversationActivity"
    android:background="@color/drift_sdk_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">


        <TextView
            android:id="@+id/drift_sdk_conversation_activity_status_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drift_sdk_no_network_connection"
            android:background="@color/drift_sdk_red"
            android:textColor="@color/drift_sdk_white"
            android:textSize="12sp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/drift_sdk_conversation_activity_recycler_activity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="35dp"/>


        <TextView
            android:id="@+id/drift_sdk_conversation_activity_drift_brand_text_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:padding="10dp"
            android:text="@string/drift_sdk_were_powered_by_drift"
            android:textColor="@color/drift_sdk_textColor"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginTop="-35dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="-3dp"
            android:background="@drawable/drift_sdk_conversation_activity_bottom_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:animateLayoutChanges="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <ImageView
                android:id="@+id/drift_sdk_conversation_activity_plus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/drift_sdk_red"
                android:scaleType="centerInside"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/drift_sdk_conversation_activity_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/drift_sdk_reply"
                android:gravity="center_vertical"
                android:background="@color/drift_sdk_transparent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:imeActionLabel="Send"
                android:imeOptions="actionSend"
                android:inputType="textCapSentences|textMultiLine|textAutoComplete"
                />


            <ImageView
                android:id="@+id/drift_sdk_conversation_activity_send_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:scaleType="centerInside"
                android:src="@drawable/drift_sdk_ic_send_message_button"
                android:visibility="gone"
                android:background="@color/drift_sdk_red"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/drift_sdk_conversation_activity_welcome_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drift_sdk_conversation_activity_welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            tools:text="Test Offline Message"
            android:textColor="@color/drift_sdk_black"
            android:textAlignment="center"
            android:textSize="12sp"/>


        <ImageView
            android:id="@+id/drift_sdk_conversation_activity_welcome_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/drift_sdk_conversation_activity_progress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>